Update TestMap1.java